<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_menu" android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/app_drawer_menu" />
        <item android:id="@+id/nav_history" android:icon="@drawable/ic_history"
            android:title="@string/app_drawer_history" />
        <item android:id="@+id/nav_account" android:icon="@drawable/ic_people"
            android:title="Account" />
    </group>

    <item android:title="Other">
        <menu>
            <item android:id="@+id/nav_logout" android:icon="@android:drawable/ic_secure"
                android:title="@string/app_drawer_logout" />
            <item android:id="@+id/nav_settings" android:icon="@drawable/ic_settings"
                android:title="Settings" />
            <item android:id="@+id/nav_about" android:icon="@drawable/ic_help"
                android:title="@string/app_drawer_feedback" />
        </menu>
    </item>

</menu>